--- a/client/post_page.tpl.jade
+++ b/client/post_page.tpl.jade
@@ -21,7 +21,7 @@ with post
                 // +comments
             .five.wide.column
                 // +user_card
-                if isInRole 'admin'
+                if is_admin
                     .edit_post.ui.basic.large.button
                         i.pencil.icon
                         |Edit
