--- a/client/goldrun.jade
+++ b/client/goldrun.jade
@@ -285,12 +285,12 @@ template(name='health_club_info')
                 .ui.small.header Gavins Plumbing
                 | 303.571.5114
             .column
-                .ui.small.header Hours
+                .ui.small.header health club hours
                 .ui.list
-                    .item Mon 7a-10p
-                    .item Tues 7a-10p
-                    .item Wed 7a-10p
-                    .item Thur 7a-10p
-                    .item Fri 7a-9p
-                    .item Sat 8a-9p
-                    .item Sun 8a-10p
+                    .item mon 7a-10p
+                    .item tues 7a-10p
+                    .item wed 7a-10p
+                    .item thur 7a-10p
+                    .item fri 7a-9p
+                    .item sat 8a-9p
+                    .item sun 8a-10p
