improved sidebar logic

--- a/client/client.jade
+++ b/client/client.jade
@@ -13,11 +13,7 @@ head
 template(name='layout')
     .context.example
         +nav
-        // .ui.top.attached.demo.menu
-        //     a.item
-        //         i.sidebar.icon
-        //         |     Menu
-        .ui.bottom.attached.basic.segment.pushable
+        .ui.attached.basic.segment.pushable
             +sidebar
             .pusher
                 #main_area
