--- a/components/nav.jade
+++ b/components/nav.jade
@@ -1,43 +1,40 @@
 template(name='nav')
-    .ui.inverted.brown.borderless.stackable.top.attached.labeled.icon.menu
-        a.toggle_sidebar.icon.item
-            i.sidebar.icon
-        a.header.icon.item(href='/' class="{{isActivePath '/'}}") 
-            i.home.icon
-            | home
+    .ui.inverted.grbrown.borderless.stackable.attached.labeled.icon.menu
+        //- a.toggle_sidebar.icon.item
+        //-     i.sidebar.icon
+        a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
+            i.dashboard.icon
+            | dashboard
         a.icon.item(href='/users' class="{{isActivePath '/users'}}")
             i.users.icon
             | users
-        a.ui.mobile.hidden.simple.dropdown.item(href='/community' class="{{isActivePath '/community'}}")
-            i.users.icon
-            | community
-            .ui.menu
-                a.mobile.hidden.item(href='/people' class="{{isActivePath '/people'}}")
-                    i.calendar.icon
-                    | events
-                a.mobile.hidden.item(href='/people' class="{{isActivePath '/people'}}")
-                    i.shopping.bag.icon
-                    | classifieds
-                a.mobile.hidden.item(href='/people' class="{{isActivePath '/people'}}")
-                    i.comments.outline.icon
-                    | discussion
-        a.mobile.hidden.item(href='/posts' class="{{isActivePath '/posts'}}")
-            i.sticky.note.outline.icon
-            | posts
+        //- a.ui.mobile.hidden.simple.dropdown.item(href='/community' class="{{isActivePath '/community'}}")
+        //-     i.users.icon
+        //-     | community
+        //-     .ui.menu
+        //-         a.mobile.hidden.item(href='/people' class="{{isActivePath '/people'}}")
+        //-             i.calendar.icon
+        //-             | events
+        //-         a.mobile.hidden.item(href='/people' class="{{isActivePath '/people'}}")
+        //-             i.shopping.bag.icon
+        //-             | classifieds
+        //-         a.mobile.hidden.item(href='/people' class="{{isActivePath '/people'}}")
+        //-             i.comments.outline.icon
+        //-             | discussion
+        //- a.mobile.hidden.item(href='/posts' class="{{isActivePath '/posts'}}")
+        //-     i.sticky.note.outline.icon
+        //-     | posts
         a.mobile.hidden.item(href='/checkin' class="{{isActivePath '/checkin'}}")
-            i.sign.in.alternate.icon
+            i.clinic.medical.icon
             | health club
-        .ui.mobile.hidden.labeled.icon.right.inverted.brown.menu
+        .ui.mobile.hidden.labeled.icon.right.inverted.grbrown.menu
             if currentUser
-                a.icon.item(href='/dashboard' class="{{isActivePath '/dashboard'}}")
-                    i.dashboard.icon
-                    | dashboard
-                .ui.simple.dropdown.icon.item(href="/user/#{currentUser.username}/notifications" class="{{isActivePath '/messages'}}")
-                    i.alarm.icon
-                    | alerts
-                    .menu
-                        each notifications
-                            .item #{text}
+                //- .ui.simple.dropdown.icon.item(href="/user/#{currentUser.username}/notifications" class="{{isActivePath '/messages'}}")
+                //-     i.alarm.icon
+                //-     | alerts
+                //-     .menu
+                //-         each notifications
+                //-             .item #{text}
                 a.icon.item(href="/user/#{currentUser.username}/messages" class="{{isActivePath '/messages'}}")
                     i.mail.icon
                     | mail
@@ -63,7 +60,7 @@ template(name='nav')
 
 
 template(name='sidebar')
-    .ui.left.inline.vertical.sidebar.inverted.brown.fixed.menu
+    .ui.left.inline.vertical.sidebar.inverted.grbrown.fixed.menu
         a.header.toggle_sidebar.item(href='/' class="{{isActivePath '/'}}") 
             i.home.icon
             | gold run
@@ -120,15 +117,10 @@ template(name='sidebar')
                 | log in
 
 
-template(name='camera')
-    #webcam
-    button.snap Take photo
-    if image
-        img(src='{{image}}')
 
 
 template(name='footer')
-    .ui.fluid.inverted.brown.attached.segment.footer
+    .ui.fluid.inverted.grbrown.attached.segment.footer
         .ui.container.grid
             .twelve.wide.inverted.column
                 +health_club_info    
